# so_arm100_write

./: README.md  arm_controller.py  motion_controller.py  task_progress.md  task_progress_summary.md  test_arm_direct.py  test_draw_rectangle.py  test_init_position.py  write_characters.py
model/so_arm100_write/: CMakeLists.txt  package.xml
model/so_arm100_write/urdf/: so_arm100_write.urdf
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/arm_description/share/arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/arm_description/share/arm_description/cmake/: arm_descriptionConfig-version.cmake  arm_descriptionConfig.cmake
ros2_ws/install/arm_description/share/arm_description/config/: display.rviz  (+1 more)
ros2_ws/install/arm_planning/share/arm_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/arm_visualization/lib/arm_visualization/: rectangle_gui  rectangle_visualizer
ros2_ws/install/arm_visualization/share/arm_visualization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/so_arm100_write/share/so_arm100_write/: package.bash  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/arm_planning/: package.xml  setup.cfg  setup.py
ros2_ws/src/arm_visualization/: package.xml  rectangle_position.txt  setup.cfg  setup.py
ros2_ws/src/arm_visualization/arm_visualization/: arm_controller.py  motion_controller.py  rectangle_visualizer.py
scripts/: trajectory_visualizer.py
(+17 files in other folders)
